# delfos-etl

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: run.py
src/etl/: extract.py  load.py  transform.py
src/migrations/: env.py
src/migrations/versions/: 26b0905c786c_create_signal_and_data_tables.py  3adbf0330a04_fix_relationship_between_models.py  cd1369a4b2d4_change_models_to_support_json_and_.py
src/models/: models.py
src/utils/: session.py
